Confitte Project img

--- a/_projects/2017-03-10-confitte.markdown
+++ b/_projects/2017-03-10-confitte.markdown
@@ -7,7 +7,7 @@ author: Vicky Guareschi
 categories:Photography, product 
 - project
 img: portfolio_07.jpg
-thumb: thumb02.jpg
+thumb: 2.jpg
 carousel:
 - Confitte1.jpg
 - Confitte2.jpg
